# attocom-mqtt-conn

./: .execution_steps.swp  .server.c.swp  CMakeLists.txt  execution_steps  instruction
demos/mqtt/mqtt_demo_mutual_auth/: CMakeLists.txt  demo_config.h  mqtt_demo_mutual_auth.c  readasync.c  readerInfo.c  reader_main.c  reader_main.h  rfid-reader
demos/mqtt/mqtt_demo_mutual_auth/sdk/mercury/include/: llrp_reader_imp.h  tm_config.h  tm_reader.h  tmr_llrp_reader.h
demos/mqtt/mqtt_demo_mutual_auth/sdk/mercury/lib/: libltkc.so.1  libltkctm.so.1  libmercuryapi.so.1
